# leverans

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.docs  LICENSE  Makefile  README.md  ]  deploy.yaml  main.db
.github/workflows/: release.yml
cli/: Cargo.toml  build.rs  deploy.yaml
cli/src/: api.rs  commands.rs  data.rs  main.rs  routes.rs  utils.rs
cli/src/handlers/: auth_handle.rs  build_handle.rs  deploy_handle.rs  mod.rs  new_handler.rs  plan_handle.rs  secret_handle.rs
docs/: .swp  Cargo.toml  Makefile  global.css  package-lock.json  package.json
docs/content/: install.md  overview.md
docs/docs/: cli-all-commands.md  cli-auth-login.md  cli-deploy.md  config-apps.md  config-common.md  config-file.md  config-services.md  features-and-vision.md  get-started.md  installation.md  overview.md  quick_start.md
docs/src/: content.rs  install.rs  main.rs  render.rs
docs/templates/: header.html  index.html  layout.html  menu.html  navbar.html
examples/django/: deploy.yaml
examples/go/: Dockerfile  README.md  deploy.yaml  go.mod  main.go
examples/go_nixpacks/: deploy.yaml  main.go
examples/react_caddy/: Dockerfile  README.md  deploy.yaml  index.html  local.yaml  package-lock.json  package.json
examples/remix_pocketbase/: Dockerfile  README.md  deploy.yaml  local.yaml  package-lock.json  package.json
scripts/: build-cli.py  build-manager.py  build_and_push_manager_docker.sh  clean.sh  cli-release.py  release-cli-unix.sh  release-windows.ps1  run.sh
server/: .gitignore  Cargo.toml  main.db  traefik.toml
server/src/: main.rs  server.rs
server/src/cron/: mod.rs
server/src/repo/: config_repo.rs  deploy_repo.rs  mod.rs  secret_repo.rs  user_repo.rs
server/src/server/: auth_handler.rs  deploy_handler.rs  docker_handler.rs  healthz_handler.rs  plan_handler.rs  secret_handler.rs
shared/: Cargo.toml
shared/benches/: main_bench.rs
shared/src/: docker_platform.rs  lib.rs
shared/src/config/: mod.rs  shared.rs
shared/src/config_process/: db_params.rs  mod.rs
shared/src/console/: mod.rs
shared/src/deployable/: deploy.rs  mod.rs  rollback.rs  task.rs
shared/src/docker/: custom.rs  image.rs  mod.rs  service.rs  volume.rs
shared/src/rollup/: mod.rs  rollup_app.rs  rollup_db.rs  rollup_service.rs  rollup_utils.rs
shared/src/rollup/rollupables/: connects.rs  db_params.rs  mod.rs
(+18 files in other folders)
