[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.89"
bcrypt = "0.15.1"
bytes = "1.8.0"
chrono = "0.4.38"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
proc-macro2 = "1.0.87"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.132"
shared = { path = "../shared" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tokio ={ version = "1.40.0", features = ["full"] } 
tokio-util = "0.7.12"
uuid = {version ="1.11.0", features=["v4"]}
