[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
bollard = "0.17.1"
bytes = "1.7.2"
dirs = "5.0.1"
futures-util = "0.3.31"
ignore = "0.4.23"
indicatif = "0.17.9"
serde = "1.0.210"
serde_json = "1.0.132"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
tar = "0.4.42"
tokio = { version = "1.40.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.4"

